--- a/src/components/Landing.css
+++ b/src/components/Landing.css
@@ -8,6 +8,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
+  -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   background: rgba(255, 255, 255, 0.8);
   padding: 50px;
@@ -34,5 +35,12 @@
   position: absolute;
   top: 80%;
   left: 50%;
+  -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+
+.main_button:hover {
+  box-shadow: 10px 10px 0px #fff;
 }
