--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,7 +1,12 @@
 .nav_bar {
   height: 10vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -ms-flex-pack: distribute;
   justify-content: space-around;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
@@ -14,12 +19,14 @@
   color: inherit;
   text-decoration: none;
   line-height: 24px;
-  &:before,
-  &:after {
-    content: "";
-    position: absolute;
-    transition: all 0.3s;
-  }
+}
+
+.nav_bar_link:before,
+.nav_bar_link:after {
+  content: "";
+  position: absolute;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
 }
 
 .hover_effect {
@@ -27,17 +34,21 @@
   padding-top: 10px;
   padding-bottom: 5px;
   overflow: hidden;
-  &:before {
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 2px;
-    background: #000;
-    transform: translateX(-100%);
-  }
-  &:hover:before {
-    transform: translateX(0);
-  }
+}
+
+.hover_effect:before {
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  background: #000;
+  -webkit-transform: translateX(-100%);
+  transform: translateX(-100%);
+}
+
+.hover_effect:hover:before {
+  -webkit-transform: translateX(0);
+  transform: translateX(0);
 }
 
 .nav_bar_mobile_checkbox {
@@ -46,10 +57,10 @@
 
 .nav_bar_mobile_button {
   position: absolute;
-  top: 20px;
+  top: 15px;
   right: 30px;
-  height: 60px;
-  width: 60px;
+  height: 55px;
+  width: 55px;
   z-index: 2000;
 }
 
@@ -63,10 +74,12 @@
   position: absolute;
   top: 50%;
   left: 50%;
+  -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 }
 
 .nav_bar_mobile_checkbox:checked ~ .nav_bar_mobile_background {
+  -webkit-transform: scale(60);
   transform: scale(60);
 }
 
@@ -84,8 +97,9 @@
   border-radius: 50%;
   background: #fff;
   z-index: 1000;
-
+  -webkit-transform: scale(0);
   transform: scale(0);
+  -webkit-transition: all 1s;
   transition: all 1s;
 }
 
@@ -96,9 +110,9 @@
   top: 0;
   right: 0;
   z-index: 1500;
-
   opacity: 0;
   visibility: hidden;
+  -webkit-transition: all 1s;
   transition: all 1s;
 }
 
@@ -106,6 +120,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
+  -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   list-style: none;
   text-align: center;
@@ -125,11 +140,13 @@
   text-decoration: none;
   text-transform: uppercase;
   font-family: Cabin-Medium;
+  -webkit-transition: all 0.4s;
   transition: all 0.4s;
 }
 
 .nav_bar_mobile_link:hover,
 .nav_bar_mobile_link:active {
+  -webkit-transform: translateX(10px);
   transform: translateX(10px);
 }
 
@@ -139,9 +156,13 @@
   }
   .brand-logo {
     position: absolute;
-    top: 30px;
+    top: 15px;
     left: 30px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     color: #fff;
     text-decoration: none;
