ajout des erreurs sur l'inscription d'un utilisateur

--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,13 @@
   font-family: "Melt-Script-Rough";
   src: url(/src/fonts/Melts-Script-Rough.otf);
 }
+
+/*
+.message_erreur_input{
+  display:none;
+}
+*/
+
+*{
+  font-family: Cabin-Medium;
+}
