--- a/src/components/css/Landing.css
+++ b/src/components/css/Landing.css
@@ -1,5 +1,5 @@
 .landing {
-  background: url(../img/image.jpg) no-repeat center center fixed;
+  background: url(../../img/image.jpg) no-repeat center center fixed;
   background-size: cover;
   height: 90vh;
 }
