--- a/src/components/css/Product.css
+++ b/src/components/css/Product.css
@@ -2,7 +2,7 @@
   text-decoration: none;
   min-width: 230px;
   height: 350px;
-  margin: 0 0 20px 20px;
+  margin: 0 20px 20px 0px;
   background: -webkit-gradient(
     linear,
     right bottom,
@@ -13,12 +13,17 @@
   background: linear-gradient(to left top, #986946, #d8c6b8);
 }
 
+.item img {
+  max-width: 230px;
+  max-height: 230px;
+}
+
 .item p {
   text-align: center;
   font-family: Cabin-Medium;
   font-size: 18px;
   color: #fff;
-  margin-top: 10px;
+  margin-top: 40px;
   -webkit-transform: rotate(0deg);
   transform: rotate(0deg);
   -webkit-transition: all 0.3s ease;
@@ -34,6 +39,11 @@
 .produitimage {
   flex: 50%;
   margin-top: 30px;
+}
+
+.produitimage img {
+  max-width: 90%;
+  max-height: 90%;
 }
 
 .produitinfos {
@@ -79,5 +89,8 @@
   }
   .produitinfos {
     margin: 0 50px;
+  }
+  .item {
+    margin: 0 0 20px 20px;
   }
 }
