ajout page CGU et CGV

--- a/src/components/css/Main.css
+++ b/src/components/css/Main.css
@@ -58,6 +58,12 @@ main {
   margin-bottom: 20px;
 }
 
+.section_title2 {
+  font-family: Cabin-Medium;
+  font-size: 32px;
+  margin-top: 20px;
+}
+
 .section_text {
   font-family: Cabin-Medium;
   font-size: 16px;
@@ -163,5 +169,8 @@ main {
 @media (max-width: 37.5em) {
   .subsection_title::before {
     left: 24%;
+  }
+  .container {
+    padding: 0 20px;
   }
 }
