--- a/src/components/css/FormContact.css
+++ b/src/components/css/FormContact.css
@@ -1,5 +1,33 @@
+.flexform form textarea {
+  display: block;
+  padding: 10px 10px;
+  background-color: #e2e2e2;
+  border: none;
+  border-radius: 3px;
+  width: 320px;
+  height: 150px;
+  resize: none;
+}
+
 .map {
-    width: 30%;
+  width: 400px;
+  height: 400px;
+  border: none;
+  flex-wrap: wrap;
+}
+
+@media (max-width: 56.25em) {
+  .flexform form textarea {
+    width: 240px;
+  }
+  .map {
+    width: 300px;
     height: 300px;
-    border: none;
+  }
+}
+
+@media (max-width: 37.5em) {
+  .flexform form textarea {
+    width: 260px;
+  }
 }
