texte page d'accueil

--- a/src/App.css
+++ b/src/App.css
@@ -23,13 +23,14 @@
 }
 */
 
-*{
+* {
   font-family: Cabin-Medium;
 }
 
-.load{
+.load {
   background-image: url("img/load.gif");
-  width:200px;
-  height:200px;
-  margin : 0 auto;
+  background-size: 100px;
+  width: 100px;
+  height: 100px;
+  margin: 0 auto;
 }
