--- a/src/components/css/Footer.css
+++ b/src/components/css/Footer.css
@@ -6,7 +6,7 @@ footer {
   flex-wrap: wrap;
   -ms-flex-pack: distribute;
   justify-content: space-around;
-  margin: 50px 0;
+  margin: 100px 0 30px 0;
   font-family: Cabin-Medium;
   font-size: 16px;
 }
