--- a/src/components/css/Reservation.css
+++ b/src/components/css/Reservation.css
@@ -1,3 +1,31 @@
 path {
-    pointer-events: none;
+  pointer-events: none;
+}
+
+table {
+  width: 100%;
+}
+
+td {
+  border: solid 0px #000;
+  padding: 5px 10px;
+  margin: 0;
+  text-align: left;
+}
+
+th:not(th:first-child) {
+  background-color: #e5e5e5;
+}
+
+td:nth-child(1) {
+  background-color: #e5e5e5;
+}
+
+@media (max-width: 56.25em) {
+}
+
+@media (max-width: 37.5em) {
+  .table_overflow {
+    overflow-x: scroll;
+  }
 }
