--- a/src/components/css/Nav.css
+++ b/src/components/css/Nav.css
@@ -1,5 +1,5 @@
 .nav_bar {
-  height: 10vh;
+  height: 80px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -56,7 +56,7 @@
 }
 
 .nav_bar_mobile_button {
-  position: absolute;
+  position: fixed;
   top: 15px;
   right: 30px;
   height: 55px;
@@ -155,17 +155,21 @@
     display: none;
   }
   .brand-logo {
-    position: absolute;
-    top: 15px;
-    left: 30px;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    padding: 0 0 0 20px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    color: #fff;
+    background-color: rgba(255, 255, 255, 0.8);
+    width: 100vw;
+    height: 80px;
     text-decoration: none;
+    z-index: 99;
   }
   .brand-logo:hover {
     color: #fff;
