--- a/src/components/css/FormInscription.css
+++ b/src/components/css/FormInscription.css
@@ -42,6 +42,26 @@
   margin-bottom: 10px;
 }
 
+.button_inscription_connexion {
+  font-family: Cabin-Medium;
+  font-size: 16px;
+  color: #fff;
+  background-color: #986946;
+  border: 2px solid #986946;
+  width: 260px;
+  height: 35px;
+  padding: 5px 0px;
+  margin-top: 10px;
+  transition: all 0.2s ease;
+  cursor: pointer;
+}
+
+.button_inscription_connexion:hover {
+  color: #986946;
+  background-color: #fff;
+  cursor: pointer;
+}
+
 @media (max-width: 56.25em) {
   .flexform form input {
     width: 240px;
