--- a/src/components/css/Reservation.css
+++ b/src/components/css/Reservation.css
@@ -1,3 +1,7 @@
+.reservation_description {
+  margin: 20px 0;
+}
+
 path {
   pointer-events: none;
 }
@@ -54,9 +58,9 @@ path {
   .carte_svg {
     width: 380px;
   }
-.options_text {
-  margin: 10px 0;
-}
+  .options_text {
+    margin: 10px 0;
+  }
 }
 
 .flex_checkbox {
@@ -111,6 +115,33 @@ td:nth-child(1) {
   background-color: #e2e2e2;
 }
 
+.legende_couleur_place {
+  margin: 20px 0;
+}
+
+.commande_button {
+  text-align: center;
+  text-decoration: inherit;
+  font-family: Cabin-Medium;
+  font-size: 18px;
+  border: 2px solid #986946;
+  background: #986946;
+  color: #fff;
+  padding: 5px 20px;
+  margin: 20px 0 0 0;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+
+.commande_button:hover {
+  border: 2px solid #986946;
+  background: none;
+  color: #986946;
+}
+
 @media (max-width: 56.25em) {
   .flex_checkbox div {
     flex: 100%;
@@ -120,12 +151,8 @@ td:nth-child(1) {
 @media (max-width: 37.5em) {
   .carte_svg {
     width: 150%;
-    margin: 20px 30px 0px 30px;
   }
   .table_overflow {
     overflow-x: scroll;
-  }
-  .legende_couleur_place {
-    margin: 20px 30px;
   }
 }
