--- a/src/components/css/FormContact.css
+++ b/src/components/css/FormContact.css
@@ -20,6 +20,7 @@
   margin: 20px 0 20px 0;
 }
 
+/*Style pour différentes tailles d'écran*/
 @media (max-width: 56.25em) {
   .flexform form textarea {
     width: 240px;
