--- a/src/components/css/Landing.css
+++ b/src/components/css/Landing.css
@@ -1,3 +1,4 @@
+/*Partie de la page d'accueil avec l'image prenant l'écran entier et le texte Votre espace de coworking*/
 .landing {
   background: url(../../img/image.jpg) no-repeat center center fixed;
   background-size: cover;
