--- a/src/components/css/Main.css
+++ b/src/components/css/Main.css
@@ -1,7 +1,9 @@
+/*Permet de gérer les marges sur le site et de ne pas avoir les éléments collés au bord à gauche et à droite*/
 main {
   margin: 30px 12%;
 }
 
+/*Style pour différentes tailles d'écran*/
 @media (min-width: 106.25em) {
   main {
     margin: 60px 18%;
@@ -165,6 +167,7 @@ main {
   color: #000;
 }
 
+/*Style pour différentes tailles d'écran*/
 @media (max-width: 56.25em) {
   .subsection_title::before {
     left: 35%;
