--- a/src/components/css/Product.css
+++ b/src/components/css/Product.css
@@ -79,9 +79,7 @@
   max-width: 500px;
 }
 
-@media (max-width: 56.25em) {
-}
-
+/*Style pour différentes tailles d'écran*/
 @media (max-width: 37.5em) {
   .produitimage {
     display: flex;
