--- a/src/components/css/Reservation.css
+++ b/src/components/css/Reservation.css
@@ -148,6 +148,7 @@ td:nth-child(1) {
   height: 100%;
 }
 
+/*Style pour différentes tailles d'écran*/
 @media (max-width: 56.25em) {
   .flex_checkbox div {
     flex: 100%;
