ajout de la connexion

--- a/src/components/css/Nav.css
+++ b/src/components/css/Nav.css
@@ -29,6 +29,11 @@
   transition: all 0.3s;
 }
 
+
+.a_cursor{
+  cursor:pointer;
+}
+
 .hover_effect {
   display: inline-block;
   padding-top: 10px;
