--- a/src/components/css/Nav.css
+++ b/src/components/css/Nav.css
@@ -61,7 +61,8 @@
 .nav_bar_mobile_button {
   position: fixed;
   top: 15px;
-  right: 30px;
+  /*right: 30px;*/
+  left:30px;/*ajouté*/
   height: 55px;
   width: 55px;
   z-index: 2000;
@@ -93,8 +94,8 @@
 
 .nav_bar_mobile_background {
   position: fixed;
-  top: 30px;
-  right: 30px;
+  top: 20px;
+  left: 30px;
   height: 60px;
   width: 60px;
   border-radius: 50%;
@@ -160,7 +161,8 @@
   .brand-logo {
     position: fixed;
     top: 0px;
-    left: 0px;
+    left: 80px;
+    /*left: 0px;*/
     padding: 0 0 0 20px;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -168,8 +170,9 @@
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    background-color: rgba(255, 255, 255, 0.8);
-    width: 100vw;
+
+    /*background-color: rgba(255, 255, 255, 0.8);*/
+    width: 30vw;
     height: 80px;
     text-decoration: none;
     z-index: 99;
@@ -177,6 +180,20 @@
   .brand-logo:hover {
     color: #fff;
     text-decoration: none;
+  }
+  .nav_bar_mobile_profile{
+    position:fixed;
+    top:25px;
+    right:25px;
+    z-index:1000;
+  }
+  .nav_bar_mobile{
+    position:fixed;
+    background-color: rgba(255, 255, 255, 0.8);
+    height:80px;
+    top:  0px;
+    z-index:50;
+    width:100%;
   }
 }
 
@@ -186,5 +203,8 @@
   }
   .nav_bar_mobile_button {
     display: none;
+  }
+  .nav_bar_mobile_profile{
+    display:none;
   }
 }
